# lox-compiler

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: donut.lox  file.lox  hello_world.lox
src/: ast.rs  cli.rs  codegen.rs  error.rs  gram.lalrpop  grammar.lalrpop  lib.rs  main.rs  parser.rs
src/codegen/: gen_expr.rs  gen_fun.rs  gen_stmt.rs  lox_value.rs  mod.rs  string_literals.rs
tests/: canary.rs  codegen.rs  parser.rs
tests/codegen/: expr.rs  main.rs  mock_print.rs  print.rs  stmt.rs
